Fixed nav spacing

--- a/CSS/index.CSS
+++ b/CSS/index.CSS
@@ -199,7 +199,7 @@ nav .navHeader {
 }
 @media (min-width: 501px) {
   nav .navHeader {
-    width: 20%;
+    width: 30%;
     border-bottom: none;
   }
   nav .navHeader h1 {
@@ -222,7 +222,8 @@ nav .links {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    width: 20%;
+    width: 30%;
+    text-align: center;
   }
 }
 nav .links a {
@@ -239,7 +240,8 @@ nav .links a {
   nav .links a {
     font-size: 2rem;
     border-bottom: none;
-    width: 10%;
+    width: 28%;
+    margin: 0 10px;
   }
 }
 nav .buttons {
@@ -258,7 +260,7 @@ nav .buttons {
     justify-content: space-around;
     align-items: center;
     flex-wrap: nowrap;
-    width: 20%;
+    width: 30%;
     border-bottom: none;
     margin-right: 30px;
   }
