--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -12,7 +12,7 @@ nav{
         text-align: center;
         padding: 20px 0px;
     @media @desktop{
-            width: 20%;
+            width: 30%;
             
             border-bottom: none;
             h1{
@@ -29,7 +29,8 @@ nav{
         width: 100%;
         @media @desktop{
             .flex(row, space-between, center, wrap);
-            width: 20%;
+            width: 30%;
+            text-align: center;
         }
 
         a{
@@ -44,7 +45,9 @@ nav{
             @media @desktop{
             font-size: 2rem;
                 border-bottom: none;
-                width: 10%;
+                width: 28%;
+                margin: 0 10px;
+               
             }
         }
     } 
@@ -56,7 +59,7 @@ nav{
 
           @media @desktop{
                 .flex(row, space-around, center, nowrap);
-                width: 20%;
+                width: 30%;
                 border-bottom: none;
                 margin-right: 30px;
             }
